--- a/lab1/lab1_hw.Rmd
+++ b/lab1/lab1_hw.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 1 Homework"
-author: "Please Add Your Name Here"
+author: "Tian Xia"
 date: "`r Sys.Date()`"
 output:
   html_document: 
@@ -17,6 +17,7 @@ Make sure to use the formatting conventions of RMarkdown to make your report nea
 
 **2. What is the difference between R and RStudio? What is GitHub and why is it useful to programmers?**  
 
+R is a programming language that is usually used in statistic related field. RStudio is a program for programmers to write R. RStudio would be useless if not using R language. GitHub is a online interconnecting platform that allow programmers to share their code. It is useful because it allows programmers to review and edit the code at the same time. 
 
 
 **3. Navigate to my [BIS15L](https://github.com/jmledford3115/BIS15LW2021_jledford) repository on GitHub. Notice that near the bottom there is a nice, clean description of the repository. You want this on your repository! It is built by making edits to the `README.md` file using the RMarkdown conventions. Edit your repository's `README.md` file so that you have a clean informative description, including your email address. Be creative! You don't need to just copy mine. There are lots of examples online.**  
@@ -30,7 +31,7 @@ Make sure to use the formatting conventions of RMarkdown to make your report nea
 8 / 2 * 2 
 ```
 
-**5. Did any of the results in #4 surprise you? Write two programs that calculate each expression such that the result for the first example is 4 and the second example is 16.**    
+**5. Did any of the results in #4 surprise you? Write two programs that calculate each expression such that the result for the first example is 4 and the second example is 8.**    
 
 ```{r}
 
