--- a/lab1/lab1_hw.Rmd
+++ b/lab1/lab1_hw.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output:
   html_document: 
     theme: spacelab
-    keep_md: yes
+    keep_md: true
 ---
 
 ## Instructions
@@ -34,11 +34,11 @@ R is a programming language that is usually used in statistic related field. RSt
 **5. Did any of the results in #4 surprise you? Write two programs that calculate each expression such that the result for the first example is 4 and the second example is 8.**    
 
 ```{r}
-
+(6+4)*2-16
 ```
 
 ```{r}
-
+6*4/3
 ```
 
 **6. `Objects` in R are a way in which we can store data or operations. We will talk more about objects next week. For now, make a new object `pi` as 3.14159265359 by running the following code chunk. You should now see the object `pi` in the environment window in the top right.**  
@@ -49,7 +49,7 @@ pi <- 3.14159265359
 **7. Let's say we want to multiply `pi` by 2. Using the same arithmetic principles that we just learned, write a code chunk that performs this operation using the object we created.**  
 
 ```{r}
-
+pi*2
 ```
 
 **8. In order to get help with any command in R, just type a `?` in front the command of interest. Practice this by running the following code chunk.**  
@@ -63,12 +63,12 @@ x <- c(2, 8, 6, 6, 7, 4, 9, 9, 9, 10)
 ```
 
 ```{r}
-
+mean(x)
 ```
 
 **10. Repeat the procedure above, but this time calculate the median.**  
 ```{r}
-
+median(x)
 ```
 
 ## Push your final code to GitHub!
