--- a/lab2/lab2_hw.Rmd
+++ b/lab2/lab2_hw.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Lab 2 Homework"
-author: "Please Add Your Name Here"
+author: "Tian Xia"
 date: "`r Sys.Date()`"
 output:
-  html_document:
+  html_document: 
     theme: spacelab
-    toc: no
+    keep_md: true
 ---
 
 ## Instructions
@@ -15,9 +15,11 @@ Make sure to use the formatting conventions of RMarkdown to make your report nea
 
 1. What is a vector in R?  
 
+Vector("c") is concatenate of a group of numbers or characters into a specific phrase. 
 
 2. What is a data matrix in R?  
 
+it is a data table with many vectors. 
 
 3. Below are data collected by three scientists (Jill, Steve, Susan in order) measuring temperatures of eight hot springs. Run this code chunk to create the vectors.  
 ```{r}
@@ -33,23 +35,64 @@ spring_8 <- c(36.80, 36.45, 33.15)
 
 4. Build a data matrix that has the springs as rows and the columns as scientists.  
 
+```{r}
+hot_spring <- c(spring_1, spring_2, spring_3, spring_4, spring_5, spring_6, spring_7, spring_8)
+temp_of_spring_matrix <- matrix(hot_spring, nrow = 8, byrow = T)
+temp_of_spring_matrix
+```
+
 
 5. The names of the springs are 1.Bluebell Spring, 2.Opal Spring, 3.Riverside Spring, 4.Too Hot Spring, 5.Mystery Spring, 6.Emerald Spring, 7.Black Spring, 8.Pearl Spring. Name the rows and columns in the data matrix. Start by making two new vectors with the names, then use `colnames()` and `rownames()` to name the columns and rows.
 
+```{r}
+scientist <- c("Jill", "Steve", "Susan")
+scientist
+
+springs <- c("Bluebell Spring", "Opal Spring", "Riverside Spring", "Too Hot Spring", "Mystery Spring", "Emerald Spring", "Black Spring", "Pearl Spring")
+springs
+```
+
+```{r}
+colnames(temp_of_spring_matrix) <- scientist
+rownames(temp_of_spring_matrix) <- springs
+temp_of_spring_matrix
+```
 
 6. Calculate the mean temperature of all eight springs.
+
+```{r}
+averagetemp <- rowMeans(temp_of_spring_matrix)
+averagetemp
+```
 
 
 7. Add this as a new column in the data matrix.  
 
+```{r}
+all_temp_of_springs <- cbind(temp_of_spring_matrix, averagetemp)
+all_temp_of_springs
+```
 
 8. Show Susan's value for Opal Spring only.
 
+```{r}
+all_temp_of_springs[2,3]
+```
 
 9. Calculate the mean for Jill's column only.  
 
+```{r}
+Jill_result <- all_temp_of_springs[ ,1]
+mean(Jill_result)
+```
 
 10. Use the data matrix to perform one calculation or operation of your interest.
+
+```{r}
+average_result <- colMeans(all_temp_of_springs)
+last_chart <- rbind(all_temp_of_springs, average_result)
+last_chart
+```
 
 ## Push your final code to GitHub!
 Please be sure that you check the `keep md` file in the knit preferences.  
