--- a/lab3/lab3_hw.Rmd
+++ b/lab3/lab3_hw.Rmd
@@ -3,9 +3,9 @@ title: "Lab 3 Homework"
 author: "Tian Xia"
 date: "`r Sys.Date()`"
 output:
-  html_document:
+  html_document: 
     theme: spacelab
-    toc: no
+    keep_md: true
 ---
 
 ## Instructions
@@ -20,55 +20,80 @@ library(tidyverse)
 
 ### Mammals Sleep  
 1. For this assignment, we are going to use built-in data on mammal sleep patterns. From which publication are these data taken from? Since the data are built-in you can use the help function in R. The name of the data is `msleep`.  
-```{r}
 
+It is from V. M. Savage and G. B. West. A quantitative, theoretical framework for understanding mammalian sleep. Proceedings of the National Academy of Sciences, 104 (3):1051-1056, 2007.
+```{r}
+?msleep
 ```
 
 2. Store these data into a new data frame `sleep`.  
 ```{r}
-
+sleep <- data.frame(msleep)
+sleep
 ```
 
 3. What are the dimensions of this data frame (variables and observations)? How do you know? Please show the *code* that you used to determine this below.  
 ```{r}
-
+dim(sleep)
 ```
 
 4. Are there any NAs in the data? How did you determine this? Please show your code.  
 ```{r}
-
+is.na(sleep)
 ```
+
+Yes, there is NA, all the "true" show in results are represented as "NA" in the data frame. 
 
 5. Show a list of the column names is this data frame.
 ```{r}
-
+names(sleep)
 ```
 
 6. How many herbivores are represented in the data?  
 ```{r}
-
+table(sleep$vore)
 ```
+
 
 7. We are interested in two groups; small and large mammals. Let's define small as less than or equal to 19kg body weight and large as greater than or equal to 200kg body weight. Make two new dataframes (large and small) based on these parameters.
 ```{r}
-
+small_mammals <- filter(sleep, bodywt<=19)
+large_mammals <- filter(sleep, bodywt>=200)
+large <- data.frame(large_mammals)
+small <- data.frame(small_mammals)
+large
+small
 ```
 
 8. What is the mean weight for both the small and large mammals?
 ```{r}
-
+mean(large$bodywt)
 ```
 
 ```{r}
-
+mean(small$bodywt)
 ```
 
 9. Using a similar approach as above, do large or small animals sleep longer on average?  
 
+```{r}
+mean(large$sleep_total)
+```
 
+```{r}
+mean(small$sleep_total)
+```
+
+Large animals sleep 3.3 hrs on average, and small animals sleep 11.8 hrs on average, so small animals sleep longer.  
 
 10. Which animal is the sleepiest among the entire dataframe?
 
+```{r}
+max(sleep$sleep_total)
+sleepiest <- filter(sleep, sleep_total == 19.9)
+sleepiest
+```
+Little brown bat is the sleepiest with 19.9 hrs sleep among the entire dataframe. 
 
 ## Push your final code to GitHub!
 Please be sure that you check the `keep md` file in the knit preferences.   
