--- a/lab4/lab4_hw.Rmd
+++ b/lab4/lab4_hw.Rmd
@@ -100,21 +100,31 @@ table(homerange_new$species)
 
 **7. Make two new data frames, one which is restricted to carnivores and another that is restricted to herbivores.**  
 ```{r}
+carnivores <- filter(homerange_new, trophic.guild == "carnivore")
+```
 
+```{r}
+herbivores <- filter(homerange_new, trophic.guild == "herbivore")
 ```
 
 **8. Do herbivores or carnivores have, on average, a larger `mean.hra.m2`? Remove any NAs from the data.**  
 ```{r}
-
+mean(carnivores$mean.hra.m2, na.rm = T)
 ```
 
 ```{r}
-
+mean(herbivores$mean.hra.m2, na.rm = T)
 ```
+
+Herbivores have a larger average of "mean.hra.m2".  
 
 **9. Make a new dataframe `owls` that is limited to the mean mass, log10 mass, family, genus, and species of owls in the database. Which is the smallest owl? What is its common name? Do a little bit of searching online to see what you can learn about this species and provide a link below** 
 ```{r}
+small_data <- select(homerange, "mean.mass.g", "log10.hra", "family", "genus", "species", "common.name")
+```
 
+```{r}
+owl <- filter(homerange, common.name = "")
 ```
 
 **10. As measured by the data, which bird species has the largest homerange? Show all of your work, please. Look this species up online and tell me about it!**.  
