--- a/lab5/lab5_2.Rmd
+++ b/lab5/lab5_2.Rmd
@@ -71,7 +71,10 @@ mammals %>%
 ## Practice
 1. We are interested in the fish from the lakes "AL" and "AR" with a radii length between 2 and 4. Extract this information from the `fish` data. Use pipes!  
 ```{r}
-
+fish %>% # work with the fish data
+  filter(lakeid == "AL" | lakeid == "AR") %>% #oly these lakes
+  filter(between(radii_length_mm, 2, 4)) %>% #between 2 and 4
+  arrange(desc(radii_length_mm)) #sort to make easier to read, arrange is from smal to largest, desc is from largest to smallest
 ```
 
 ## `arrange()`
@@ -100,7 +103,14 @@ fish %>%
 ## Practice
 1. We are interested in the radii length and scalelength of fish with the id `300`. Extract this information from the `fish` data. Please sort the data by radii length.
 ```{r}
+names(fish)
+```
 
+```{r}
+fish %>%
+  select("fish_id", "radii_length_mm", "scalelength") %>%
+  filter(fish_id == 300) %>% 
+  arrange(radii_length_mm)
 ```
 
 ## `mutate()`  
