--- a/lab4/lab4_hw.Rmd
+++ b/lab4/lab4_hw.Rmd
@@ -120,16 +120,19 @@ Herbivores have a larger average of "mean.hra.m2".
 
 **9. Make a new dataframe `owls` that is limited to the mean mass, log10 mass, family, genus, and species of owls in the database. Which is the smallest owl? What is its common name? Do a little bit of searching online to see what you can learn about this species and provide a link below** 
 ```{r}
-small_data <- select(homerange, "mean.mass.g", "log10.hra", "family", "genus", "species", "common.name")
+homerange %>% 
+  select("mean.mass.g", "log10.hra", "family", "genus", "species", "common.name", "order") %>% 
+  filter(order == "strigiformes") %>% 
+  arrange(mean.mass.g)
 ```
+The smallest owl is Glaucidium passerinum. Its common name is Eurasian pygmy owl. For more information, please see the link below: https://animaldiversity.org/accounts/Glaucidium_passerinum/  
 
-```{r}
-owl <- filter(homerange, common.name = "")
-```
 
 **10. As measured by the data, which bird species has the largest homerange? Show all of your work, please. Look this species up online and tell me about it!**.  
 ```{r}
-
+homerange %>% 
+  select("mean.hra.m2", "taxon", "common.name", "family", "genus", "species", "order") %>% 
+  arrange("mean.hra.m2")
 ```
 
 ## Push your final code to GitHub!
