--- a/lab6/lab6_hw.Rmd
+++ b/lab6/lab6_hw.Rmd
@@ -2,10 +2,11 @@
 title: "dplyr Superhero"
 date: "`r Sys.Date()`"
 output:
-  html_document:
+  html_document: 
     theme: spacelab
     toc: yes
     toc_float: yes
+    keep_md: yes
 ---
 
 ## Learning Goals  
@@ -27,55 +28,151 @@ These are data taken from comic books and assembled by fans. The include a good 
 
 Check out the way I am loading these data. If I know there are NAs, I can take care of them at the beginning. But, we should do this very cautiously. At times it is better to keep the original columns and data intact.  
 ```{r}
-#superhero_info <- read_csv("data/heroes_information.csv", na = c("", "-99", "-"))
-#superhero_powers <- read_csv("data/super_hero_powers.csv", na = c("", "-99", "-"))
+superhero_info <- read_csv("data/heroes_information.csv", na = c("", "-99", "-"))
+superhero_powers <- read_csv("data/super_hero_powers.csv", na = c("", "-99", "-"))
 ```
 
 ## Data tidy
 1. Some of the names used in the `superhero_info` data are problematic so you should rename them here. Before you do anything, first have a look at the names of the variables. You can use `rename()` or `clean_names()`.    
 
+```{r}
+superhero_info_n <- superhero_info %>%
+  clean_names() %>% 
+  mutate_all(tolower)
+```
+
 ## `tabyl`
 The `janitor` package has many awesome functions that we will explore. Here is its version of `table` which not only produces counts but also percentages. Very handy! Let's use it to explore the proportion of good guys and bad guys in the `superhero_info` data.  
 ```{r}
-#tabyl(superhero_info, alignment)
+tabyl(superhero_info, alignment)
 ```
 
 1. Who are the publishers of the superheros? Show the proportion of superheros from each publisher. Which publisher has the highest number of superheros?  
 
+```{r}
+table(superhero_info_n$publisher)
+```
+DC Comics has the highest number of superheros.  
+
 2. Notice that we have some neutral superheros! Who are they? List their names below.  
+
+```{r}
+superhero_info_n %>% 
+  select(name, alignment) %>% 
+  filter(alignment=="neutral")
+```
 
 ## `superhero_info`
 3. Let's say we are only interested in the variables name, alignment, and "race". How would you isolate these variables from `superhero_info`?
 
+```{r}
+select(superhero_info_n, "name", "alignment", "race")
+```
+
 ## Not Human
 4. List all of the superheros that are not human.
+
+```{r}
+filter(superhero_info_n, race != "human")
+```
 
 ## Good and Evil
 5. Let's make two different data frames, one focused on the "good guys" and another focused on the "bad guys".
 
+```{r}
+good_guys <- superhero_info_n %>% 
+  filter(alignment == "good")
+```
+
+```{r}
+bad_guys <- filter(superhero_info_n, alignment == "bad")
+```
+
 6. For the good guys, use the `tabyl` function to summarize their "race".
+```{r}
+tabyl(good_guys, race)
+```
 
 7. Among the good guys, Who are the Vampires?
+```{r}
+filter(good_guys, race == "vampire")
+```
 
 8. Among the bad guys, who are the male humans over 200 inches in height?
+```{r}
+bad_guys$height <- as.numeric(bad_guys$height)
+bad_guys %>% 
+  filter(gender == "male") %>% 
+  filter(height >= 200)
+```
 
 9. Are there more good guys or bad guys with green hair?  
+```{r}
+green_hair_g <- filter(good_guys, hair_color == "green")
+glimpse(green_hair_g)
+```
+
+```{r}
+green_hair_b <- filter(bad_guys, hair_color== "green")
+glimpse(green_hair_b)
+```
+
+There are more good guys with green hair color.  
 
 10. Let's explore who the really small superheros are. In the `superhero_info` data, which have a weight less than 50? Be sure to sort your results by weight lowest to highest.  
+```{r}
+superhero_info_n$weight <- as.numeric(superhero_info_n$weight)
+```
+
+```{r}
+superhero_info_n %>% 
+  filter(weight <= 50) %>% 
+  arrange(weight)
+```
 
 11. Let's make a new variable that is the ratio of height to weight. Call this variable `height_weight_ratio`.    
+```{r}
+superhero_info %>% 
+  mutate(height_weight_ratio = height/weight) %>% 
+  arrange(desc(height_weight_ratio))
+```
 
 12. Who has the highest height to weight ratio?  
+
+Groot has the highest height to weight ratio. (I am Groot!).  
 
 ## `superhero_powers`
 Have a quick look at the `superhero_powers` data frame.  
 
 13. How many superheros have a combination of agility, stealth, super_strength, stamina?
+```{r}
+superhero_powers_n <- superhero_powers %>% 
+  clean_names() %>% 
+  mutate_all(tolower)
+```
+
+```{r}
+superhero_powers_n %>% 
+  select(agility, stealth, super_strength, stamina) %>% 
+  filter(agility == "true" & stealth == "true" & super_strength =="true" & stamina == "true") %>% 
+  glimpse()
+```
+There are 40 superheroes have a combination of agility, stealth, super_strength, stamina. 
 
 ## Your Favorite
 14. Pick your favorite superhero and let's see their powers!  
 
+```{r}
+superhero_powers_n %>% 
+  filter(hero_names =="groot") %>% 
+  select_if(all)
+```
+
+
 15. Can you find your hero in the superhero_info data? Show their info!  
+```{r}
+filter(superhero_info_n, name == "groot")
+```
 
 ## Push your final code to GitHub!
 Please be sure that you check the `keep md` file in the knit preferences.  
