--- a/lab7/lab7_hw.Rmd
+++ b/lab7/lab7_hw.Rmd
@@ -33,66 +33,129 @@ fisheries <- readr::read_csv(file = "data/FAO_1950to2012_111914.csv")
 
 1. Do an exploratory analysis of the data (your choice). What are the names of the variables, what are the dimensions, are there any NA's, what are the classes of the variables?  
 ```{r}
+names(fisheries)
+```
 
+```{r}
+dim(fisheries)
+```
+
+```{r}
+is.na(fisheries)
+```
+
+```{r}
+class(fisheries$`Common name`)
 ```
 
 2. Use `janitor` to rename the columns and make them easier to use. As part of this cleaning step, change `country`, `isscaap_group_number`, `asfis_species_number`, and `fao_major_fishing_area` to data class factor. 
 ```{r}
-
+fisheries<- clean_names(fisheries)
 ```
 
 We need to deal with the years because they are being treated as characters and start with an X. We also have the problem that the column names that are years actually represent data. We haven't discussed tidy data yet, so here is some help. You should run this ugly chunk to transform the data for the rest of the homework. It will only work if you have used janitor to rename the variables in question 2!  
 ```{r}
-#fisheries_tidy <- fisheries %>% 
-#  pivot_longer(-c(country,common_name,isscaap_group_number,isscaap_taxonomic_group,asfi#s_species_number,asfis_species_name,fao_major_fishing_area,measure),
-#               names_to = "year",
-#               values_to = "catch",
-#               values_drop_na = TRUE) %>% 
-#  mutate(year= as.numeric(str_replace(year, 'x', ''))) %>% 
-#  mutate(catch= str_replace(catch, c(' F'), replacement = '')) %>% 
-#  mutate(catch= str_replace(catch, c('...'), replacement = '')) %>% 
-#  mutate(catch= str_replace(catch, c('-'), replacement = '')) %>% 
-#  mutate(catch= str_replace(catch, c('0 0'), replacement = ''))
-
-#fisheries_tidy$catch <- as.numeric(fisheries_tidy$catch)
+fisheries_tidy <- fisheries %>% 
+  pivot_longer(-c(country,common_name,isscaap_group_number,isscaap_taxonomic_group,asfis_species_number,asfis_species_name,fao_major_fishing_area,measure),
+               names_to = "year",
+               values_to = "catch",
+               values_drop_na = TRUE) %>% 
+  mutate(year= as.numeric(str_replace(year, 'x', ''))) %>% 
+  mutate(catch= str_replace(catch, c(' F'), replacement = '')) %>% 
+  mutate(catch= str_replace(catch, c('...'), replacement = '')) %>% 
+  mutate(catch= str_replace(catch, c('-'), replacement = '')) %>% 
+  mutate(catch= str_replace(catch, c('0 0'), replacement = ''))
 ```
 
 3. How many countries are represented in the data? Provide a count and list their names.
 ```{r}
-
+fisheries_tidy %>% 
+  summarise(disinct_countries=n_distinct(country))
 ```
 
-4. Refocus the data only to include country, isscaap_taxonomic_group, asfis_species_name, asfis_species_number, year, catch.
 ```{r}
-
+unique(fisheries_tidy$country)
 ```
 
-5. Based on the asfis_species_number, how many distinct fish species were caught as part of these data?
-```{r}
 
+4. Refocus the data only to include country, isscaap_taxonomic_group, asfis_species_name, asfis_species_number, year, catch.  
+```{r}
+names(fisheries_tidy)
+```
+
+```{r}
+fisheries1 <- select(fisheries_tidy, country, isscaap_group_number, asfis_species_name, asfis_species_number, year, catch)
+```
+
+5. Based on the asfis_species_number, how many distinct fish species were caught as part of these data?  
+```{r}
+fisheries1 %>% 
+  mutate(asfis_species_number=as.factor(asfis_species_number)) %>% 
+  summarise(distinct_species=n_distinct(asfis_species_number))
 ```
 
 6. Which country had the largest overall catch in the year 2000?
-```{r}
 
+```{r}
+fisheries1$catch <- as.numeric(fisheries1$catch)
+```
+
+```{r}
+fisheries1 %>% 
+  group_by(country) %>% 
+  filter(year==2000) %>% 
+  summarise(catch_total=sum(catch, na.rm = T),
+            n=n())%>% 
+  arrange(desc(catch_total))
 ```
 
 7. Which country caught the most sardines (_Sardina pilchardus_) between the years 1990-2000?
 ```{r}
-
+fisheries1 %>% 
+  filter(year>=1990 & year<=2000) %>% 
+  filter(asfis_species_name == "Sardina pilchardus") %>% 
+  group_by(country) %>% 
+  summarise(catch_total2=sum(catch, na.rm = T),
+            n=n()) %>% 
+  arrange(desc(catch_total2))
 ```
 
 8. Which five countries caught the most cephalopods between 2008-2012?
 ```{r}
-
+fisheries1 %>% 
+  filter(year>=2008 & year<=2012) %>% 
+  filter(asfis_species_name == "Cephalopoda") %>% 
+  group_by(country) %>% 
+  summarise(catch_total3=sum(catch,na.rm = T),
+            n=n()) %>% 
+  arrange(desc(catch_total3))
 ```
 
 9. Which species had the highest catch total between 2008-2012? (hint: Osteichthyes is not a species)
 ```{r}
-
+fisheries1 %>% 
+  filter(year>=2008, year<=2012) %>% 
+  group_by(asfis_species_name) %>% 
+  summarise(catch_total4=sum(catch, na.rm = T),
+            n=n()) %>% 
+  filter(asfis_species_name!="Osteichthyes") %>% 
+  arrange(desc(catch_total4))
+  
 ```
 
-10. Use the data to do at least one analysis of your choice.
+10. Use the data to do at least one analysis of your choice.  
+which fish has been catch the most by China between 1950-2000? 
+```{r}
+fisheries1 %>% 
+  filter(country == "China") %>% 
+  filter(year>=1950, year<=2000) %>% 
+  group_by(asfis_species_name) %>% 
+  filter(asfis_species_name!="Osteichthyes") %>% 
+  summarise(catch_total5=sum(catch,na.rm = T),
+            n=n()) %>% 
+  arrange(desc(catch_total5))
+```
+
 
 ## Push your final code to GitHub!
 Please be sure that you check the `keep md` file in the knit preferences.   
