--- a/lab6/lab6_hw.Rmd
+++ b/lab6/lab6_hw.Rmd
@@ -44,7 +44,7 @@ superhero_info_n <- superhero_info %>%
 ## `tabyl`
 The `janitor` package has many awesome functions that we will explore. Here is its version of `table` which not only produces counts but also percentages. Very handy! Let's use it to explore the proportion of good guys and bad guys in the `superhero_info` data.  
 ```{r}
-tabyl(superhero_info, alignment)
+tabyl(superhero_info, Alignment)
 ```
 
 1. Who are the publishers of the superheros? Show the proportion of superheros from each publisher. Which publisher has the highest number of superheros?  
@@ -133,7 +133,7 @@ superhero_info_n %>%
 11. Let's make a new variable that is the ratio of height to weight. Call this variable `height_weight_ratio`.    
 ```{r}
 superhero_info %>% 
-  mutate(height_weight_ratio = height/weight) %>% 
+  mutate(height_weight_ratio = Height/Weight) %>% 
   arrange(desc(height_weight_ratio))
 ```
 
