--- a/lab10/hw9.Rmd
+++ b/lab10/hw9.Rmd
@@ -3,9 +3,9 @@ title: "Homework 9"
 author: "Please Add Your Name Here"
 date: "`r Sys.Date()`"
 output:
-  html_document:
+  html_document: 
     theme: spacelab
-    toc: no
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -58,9 +58,13 @@ colleges %>%
 3. Based on your answer to #2, make a plot that shows the number of colleges in the top 10 cities.
 ```{r}
 colleges %>% 
-  top_n(-10,city)
-  ggplot(aes(x=city))+
-  geom_bar()##this thing does not work
+  group_by(city) %>% 
+  summarize(n_coll=n()) %>% 
+  top_n(10,n_coll) %>% 
+  arrange(desc(n_coll)) %>% 
+  ggplot(aes(x=city, y=n_coll))+
+  geom_col()+
+  coord_flip()
 ```
 
 4. The column `COSTT4_A` is the annual cost of each institution. Which city has the highest average cost? Where is it located?
@@ -72,19 +76,70 @@ colleges %>%
 ```
 
 5. Based on your answer to #4, make a plot that compares the cost of the individual colleges in the most expensive city. Bonus! Add UC Davis here to see how it compares :>).
+```{r}
+colleges %>% 
+  group_by(city) %>% 
+  summarise(mean_cost=mean(costt4_a, na.rm = T)) %>% 
+  top_n(10,mean_cost) %>% 
+  arrange(desc(mean_cost)) %>% 
+  ggplot(aes(x=city, y=mean_cost))+
+  geom_col()+
+  coord_flip()
+```
 
 6. The column `ADM_RATE` is the admissions rate by college and `C150_4_POOLED` is the four-year completion rate. Use a scatterplot to show the relationship between these two variables. What do you think this means?
+```{r}
+colleges %>% 
+  ggplot(aes(x=adm_rate, y=c150_4_pooled))+
+  geom_point(na.rm = T)+
+  geom_smooth(method=lm, se=T)
+```
+This means that higher admission rate might result in lower four-year completion rate.   
 
 7. Is there a relationship between cost and four-year completion rate? (You don't need to do the stats, just produce a plot). What do you think this means?
+```{r}
+colleges %>% 
+  ggplot(aes(x=c150_4_pooled, y=costt4_a))+
+  geom_point(na.rm = T)+
+  geom_smooth(method=lm, se=T)
+```
 
 8. The column titled `INSTNM` is the institution name. We are only interested in the University of California colleges. Make a new data frame that is restricted to UC institutions. You can remove `Hastings College of Law` and `UC San Francisco` as we are only interested in undergraduate institutions.
+```{r}
+univ_calif_final<- colleges %>% 
+  filter_all(any_vars(str_detect(.,pattern="University of California"))) %>% 
+  filter(city!="San Francisco") %>% 
+  separate(instnm, into=c("univ", "campus"),
+           sep="-")
+```
 
 Remove `Hastings College of Law` and `UC San Francisco` and store the final data frame as a new object `univ_calif_final`.
 
 Use `separate()` to separate institution name into two new columns "UNIV" and "CAMPUS".
 
 9. The column `ADM_RATE` is the admissions rate by campus. Which UC has the lowest and highest admissions rates? Produce a numerical summary and an appropriate plot.
+```{r}
+univ_calif_final %>% 
+  arrange(desc(adm_rate))
+```
+
+```{r}
+univ_calif_final %>% 
+  arrange(desc(adm_rate)) %>% 
+  ggplot(aes(x=campus, y=adm_rate))+
+  geom_col()
+```
 
 10. If you wanted to get a degree in biological or biomedical sciences, which campus confers the majority of these degrees? Produce a numerical summary and an appropriate plot.
+```{r}
+univ_calif_final %>% 
+  arrange(desc(pcip26))
+```
+
+```{r}
+univ_calif_final %>% 
+  ggplot(aes(x=campus, y=pcip26))+
+  geom_col()
+```
 
 ## Knit Your Output and Post to [GitHub](https://github.com/FRS417-DataScienceBiologists)
