--- a/lab11/hw10.Rmd
+++ b/lab11/hw10.Rmd
@@ -3,9 +3,9 @@ title: "Homework 10"
 author: "Please Add Your Name Here"
 date: "`r Sys.Date()`"
 output:
-  html_document:
+  html_document: 
     theme: spacelab
-    toc: no
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -31,8 +31,22 @@ deserts <- read_csv("data/surveys_complete.csv") %>% clean_names()
 ```
 
 1. Use the function(s) of your choice to get an idea of its structure, including how NA's are treated. Are the data tidy?  
+```{r}
+glimpse(deserts)
+```
 
 2. How many genera and species are represented in the data? What are the total number of observations? Which species is most/ least frequently sampled in the study?
+```{r}
+deserts %>% # revise this question, surely not do this way. 
+  count(species) %>% 
+  arrange(n)
+```
+
+```{r}
+deserts %>% 
+  count(genus) %>% 
+  arrange(n)
+```
 
 3. What is the proportion of taxa included in this study? Show a table and plot that reflects this count.
 
