--- a/lab11/lab11_2.Rmd
+++ b/lab11/lab11_2.Rmd
@@ -46,17 +46,17 @@ p <- homerange %>%
 
 Play with point size by adjusting the `size` argument.
 ```{r}
-
+p+ geom_point(size=.35)
 ```
 
 We can color the points by a categorical variable.
 ```{r}
-
+p+geom_point(aes(color=thermoregulation), size=1.5) #for scatterplots, color is the same as fill in barplots. 
 ```
 
 We can also map shapes to another categorical variable.
 ```{r}
-
+p+geom_point(aes(color=thermoregulation, shape=thermoregulation), size=1.5)
 ```
 
 ## Barplots and multiple variables
@@ -68,22 +68,42 @@ homerange %>% count(taxon, sort=T)
 
 Now let's make a bar plot of these data.
 ```{r}
-
+homerange %>% 
+  ggplot(aes(x=taxon))+
+  geom_bar()+
+  coord_flip()+
+  labs(title="Observation by Taxon", 
+       x="Taxon")
 ```
 
 By specifying `fill=trophic.guild` we build a stacked bar plot that shows the proportion of a given taxonomic group that is an herbivore or carnivore.
 ```{r}
-
+homerange %>% 
+  ggplot(aes(x=taxon, fill=trophic.guild))+
+  geom_bar()+
+  coord_flip()+
+  labs(title="Observation by Taxon", 
+       x="Taxon")
 ```
 
 We can also have counts of each trophic guild within taxonomic group shown side-by-side by specifying `position="dodge"`.
 ```{r}
-
+homerange %>% 
+  ggplot(aes(x=taxon, fill=trophic.guild))+
+  geom_bar(position="dodge")+
+  coord_flip()+
+  labs(title="Observation by Taxon", 
+       x="Taxon")
 ```
 
 Here is the same plot oriented vertically.
 ```{r}
-
+homerange %>% 
+  ggplot(aes(x=taxon, fill=trophic.guild))+
+  geom_bar(position="dodge")+
+  theme(axis.text.x = element_text(angle = 30, hjust = 1))
+  labs(title="Observation by Taxon", 
+       x="Taxon")
 ```
 
 We can also scale all bars to a percentage.
@@ -100,16 +120,26 @@ For this practice, let's use the [palmerpenguins](https://allisonhorst.github.io
 
 1. Make a bar plot that shows counts of individuals by island. Fill by species, and try both a stacked bar plot and `position="dodge"`.
 ```{r}
-
+penguins <- penguins
 ```
 
 ```{r}
-
+penguins %>% 
+  ggplot(aes(x=island, fill=species))+
+  geom_bar(position = "dodge")+
+  coord_flip()+
+  labs(title = "counts of individuals by island", 
+       y="island")
 ```
 
 2. Make another bar plot that shows the number of individuals by sex on each island?
 ```{r}
-
+penguins %>% 
+  filter(sex!= "NA") %>% #removes the NA
+  ggplot(aes(x=island, y=sex, fill=sex))+
+  geom_col(position = "dodge")+
+  labs(title = "Sex by Island", 
+       fill="sex by color")
 ```
 
 ## Using `group`
@@ -131,7 +161,9 @@ homerange %>%
 
 I can also use `fill` to associate the different taxa with a color coded key.
 ```{r}
-
+homerange %>% 
+  ggplot(aes(x = class, y = log10.mass, group=taxon, fill=taxon)) +
+  geom_boxplot(alpha=0.4) #alpha makes the plot be able to see thru
 ```
 
 ## Wrap-up  
