--- a/lab11/hw10.Rmd
+++ b/lab11/hw10.Rmd
@@ -24,6 +24,10 @@ library(janitor)
 library(naniar)
 ``` 
 
+```{r}
+options(scipen=999)
+```
+
 ## Desert Ecology
 For this assignment, we are going to use a modified data set on [desert ecology](http://esapubs.org/archive/ecol/E090/118/). The data are from: S. K. Morgan Ernest, Thomas J. Valone, and James H. Brown. 2009. Long-term monitoring and experimental manipulation of a Chihuahuan Desert ecosystem near Portal, Arizona, USA. Ecology 90:1708.
 ```{r}
@@ -35,34 +39,122 @@ deserts <- read_csv("data/surveys_complete.csv") %>% clean_names()
 glimpse(deserts)
 ```
 
-2. How many genera and species are represented in the data? What are the total number of observations? Which species is most/ least frequently sampled in the study?
+2. How many genera and species are represented in the data? What are the total number of observations? Which species is most/ least frequently sampled in the study?  
+
+There are 26 genera and 40 species. There are 34786 total of observations. Most frequently sampled species is merriami, least frequently sampled species are clarki, scutalatus, tereticaudus, tigris, uniparens, and viridis. 
 ```{r}
-deserts %>% # revise this question, surely not do this way. 
-  count(species) %>% 
-  arrange(n)
+str(deserts)
 ```
 
 ```{r}
 deserts %>% 
-  count(genus) %>% 
+  group_by(species) %>% 
+  count(species) %>% 
+  arrange(desc(n))
+```
+
+```{r}
+deserts %>% 
+  group_by(species) %>% 
+  count(species) %>% 
   arrange(n)
+```
+```{r}
+deserts %>% 
+  group_by(genus) %>% 
+  count(genus) %>% 
+  arrange(desc(n))
 ```
 
 3. What is the proportion of taxa included in this study? Show a table and plot that reflects this count.
-
+```{r}
+deserts %>% 
+  ggplot(aes(x=taxa))+
+  geom_bar()+
+  coord_flip()+
+  labs(title="Observation by Taxa", 
+       x="Taxa")+
+  scale_y_log10()
+```
 4. For the taxa included in the study, use the fill option to show the proportion of individuals sampled by `plot_type.`
+```{r}
+deserts %>% 
+  ggplot(aes(x=taxa, fill=species))+
+  geom_bar()+
+  coord_flip()+
+  labs(title="Observation by Taxa", 
+       x="Taxa", 
+       fill="Species by Color")+
+  scale_y_log10()+
+  theme(axis.text.x = element_text(angle = 30, hjust = 1))
+```
 
 5. What is the range of weight for each species included in the study? Remove any observations of weight that are NA so they do not show up in the plot.
+```{r}
+deserts %>% 
+  ggplot(aes(x=species, y=weight, fill=weight))+
+  geom_boxplot(na.rm = T)+
+  coord_flip()
+```
 
 6. Add another layer to your answer from #5 using `geom_point` to get an idea of how many measurements were taken for each species.
+```{r}
+deserts %>% 
+  ggplot(aes(x=species, y=weight, fill=weight,color=genus))+
+  geom_point(na.rm = T, size=0.5)+
+  coord_flip()
+```
 
 7. [Dipodomys merriami](https://en.wikipedia.org/wiki/Merriam's_kangaroo_rat) is the most frequently sampled animal in the study. How have the number of observations of this species changed over the years included in the study?
+```{r}
+deserts %>% 
+  filter(species=="merriami") %>% 
+  group_by(year) %>% 
+  ggplot(aes(x=year))+
+  geom_bar(na.rm = T)
+```
 
 8. What is the relationship between `weight` and `hindfoot` length? Consider whether or not over plotting is an issue.
+```{r}
+deserts %>% 
+  ggplot(aes(x=weight, y=hindfoot_length, color=species_id))+
+  geom_jitter(na.rm = T, size=0.1)+
+  labs(title = "Hindfoot by Weight", 
+       y="hindfoot")
+```
 
 9. Which two species have, on average, the highest weight? Once you have identified them, make a new column that is a ratio of `weight` to `hindfoot_length`. Make a plot that shows the range of this new ratio and fill by sex.
+```{r}
+deserts %>% 
+  group_by(species) %>% 
+  summarise(mean_w=mean(weight, na.rm = T)) %>% 
+  arrange(desc(mean_w))
+```
+
+```{r}
+deserts %>% 
+  filter(species=="albigula" | species=="spectabilis") %>% 
+  filter(sex!= "NA") %>% 
+  ggplot(aes(x=weight, y=hindfoot_length, fill=sex))+
+  geom_col(na.rm = T)+
+  labs(title = "weight by hindfoot",
+       y="hindfoot")
+```
 
 10. Make one plot of your choice! Make sure to include at least two of the aesthetics options you have learned.
+```{r}
+deserts %>% 
+  group_by(genus) %>% 
+  summarise(mean_w=mean(weight, na.rm = T)) %>% 
+  filter(mean_w!="NaN") %>% 
+  ggplot(aes(x=genus, y=mean_w))+
+  geom_col(alpha=0.7)+
+  coord_flip()+
+  labs(title = "Average weight by genera",
+       x="genera", 
+       y="average weight")+
+  theme(plot.title=element_text(size = rel(1.5),hjust = 0.5)) 
+```
 
 ## Push your final code to GitHub!
 Please be sure that you check the `keep md` file in the knit preferences. 
