--- a/lab12/hw11.Rmd
+++ b/lab12/hw11.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Lab 11 Homework"
-author: "Please Add Your Name Here"
+author: "Tian Xia"
 date: "`r Sys.Date()`"
 output:
-  html_document:
+  html_document: 
     theme: spacelab
-    toc: no
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -45,8 +45,23 @@ library("gapminder")
 The questions below are open-ended and have many possible solutions. Your approach should, where appropriate, include numerical summaries and visuals. Be creative; assume you are building an analysis that you would ultimately present to an audience of stakeholders. Feel free to try out different `geoms` if they more clearly present your results.  
 
 **1. Use the function(s) of your choice to get an idea of the overall structure of the data frame, including its dimensions, column names, variable classes, etc. As part of this, determine how NAs are treated in the data.**  
+```{r}
+gapminder <- gapminder
+```
+
+```{r}
+glimpse(gapminder)
+```
+
+```{r}
+is.na(gapminder) #there is no NA in the data. 
+```
 
 **2. Among the interesting variables in gapminder is life expectancy. How has global life expectancy changed between 1952 and 2007?**
+```{r}
+gapminder %>% 
+  filter(year)
+```
 
 **3. How do the distributions of life expectancy compare for the years 1952 and 2007?**
 
