--- a/lab13/lab13_1.Rmd
+++ b/lab13/lab13_1.Rmd
@@ -32,9 +32,9 @@ library("janitor")
 library("lubridate") #this will help us manage dates
 ```
 
-Now we can list all of the files in a directory. This is very helpful when you are working with multiple files at once. We can also get the full path names with `full.names = TRUE`.
+Now we can list all of the files in a directory. This is very helpful when you are working with multiple files at once.  
 ```{r}
-files <- list.files(path = "data/spiders", pattern = ".csv", full.names = TRUE) #full.names show the result including the path
+files <- list.files(path = "data/spiders", pattern = ".csv", full.names = TRUE)
 files
 ```
 
@@ -53,7 +53,11 @@ spider_list[[3]]
 ## Practice
 1. Getting an idea of the structure of lists is a bit tricky, especially when there are many elements. Try exploring the elements in `spider_list` using names(), str(), or glimpse(). For names(), you will need to specify an element using [[]].  
 ```{r}
-glimpse(spider_list[[1]])#must use double brackets
+names(spider_list[[1]])
+```
+
+```{r}
+glimpse(spider_list[[1]])
 ```
 
 ## Naming List Elements
@@ -117,29 +121,29 @@ The general syntax for joins is...
 ```
 
 `inner_join`  
-Where did customers 3 and 4 go? #only join the row that appear in both data. 
+Where did customers 3 and 4 go?
 ```{r}
-inner_exampleDF <- inner_join(table_A, table_B, by="customer_ID") #only join the row that appear in both data. 
+inner_exampleDF <- inner_join(table_A, table_B, by="customer_ID")
 inner_exampleDF
 ```
 
 `left_join`
 Where did customer 4 go? Notice the missing data for customer 3.
 ```{r}
-left_exampleDF <- left_join(table_A, table_B, by="customer_ID") #join second table into first. 
+left_exampleDF <- left_join(table_A, table_B, by="customer_ID")
 left_exampleDF
 ```
 
 `right_join`
 Where did customer 3 go? Notice the missing data for customer 4.
 ```{r}
-right_exampleDF <- right_join(table_A, table_B, by="customer_ID") #join first table into second. 
+right_exampleDF <- right_join(table_A, table_B, by="customer_ID")
 right_exampleDF
 ```
 
 `full_join`
 ```{r}
-full_exampleDF <- full_join(table_A, table_B, by="customer_ID") #join both table entirely, and keep NAs. 
+full_exampleDF <- full_join(table_A, table_B, by="customer_ID")
 full_exampleDF
 ```
 
@@ -154,6 +158,7 @@ anti_exampleDF
 Here, the latitude and longitude for each spider were recorded from the field records at a later date, and now we need to join it to our `spiders_all` data frame. The lat/long were recorded into one single file for each observation. Let's read in the lat/long data.
 ```{r, message = FALSE}
 spiders_locs <- read_csv("data/spiders locations/spiders_locations.csv")
+spiders_locs
 ```
 
 We will use a join here to merge lat/long to our data frame. Both files contain a unique identifier called `Accession` which we will use to join.  
@@ -162,8 +167,9 @@ We will use a join here to merge lat/long to our data frame. Both files contain 
 1. Which type of join is most appropriate in this case?  
 ```{r}
 spiders_with_locs <- 
-  left_join(spiders_all, spiders_locs, by="Accession")
+  left_join(spiders_all, spiders_locs, by = "Accession")
 summary(spiders_with_locs)
+names(spiders_with_locs)
 ```
 
 As a side note, joining data can highlight problems or typos with the data when the join does not go as expected.  
@@ -231,7 +237,16 @@ ymd_hms(dateformat5)
 ## Export for part 2  
 We need to save our final data to a `.csv` so we can use it in part 2. 
 ```{r}
-#write.csv(spiders_with_locs, file = "spiders_with_locs.csv", row.names = FALSE)
+write.csv(spiders_with_locs, file = "spiders_with_locs.csv", row.names = FALSE)
+```
+
+## Installs for part 2  
+It will be very helpful if you can install the following packages before the next lab. Please install them in order!
+`devtools` and `ggmap`
+```{r}
+#install.packages("devtools")
+#library(devtools)
+#devtools::install_github("dkahle/ggmap")
 ```
 
 ## That's it, let's take a break!   
