--- a/lab14/hw13.Rmd
+++ b/lab14/hw13.Rmd
@@ -6,7 +6,7 @@ output:
   html_document:
     theme: spacelab
     toc: no
-
+runtime: shiny
 ---
 
 ```{r setup, include=FALSE}
@@ -32,13 +32,100 @@ UC_admit <- read_csv("data/UC_admit.csv")
 ```
 
 **1. Use the function(s) of your choice to get an idea of the overall structure of the data frame, including its dimensions, column names, variable classes, etc. As part of this, determine if there are NA's and how they are treated.**  
-
+```{r}
+glimpse(UC_admit)
+```
 
 **2. The president of UC has asked you to build a shiny app that shows admissions by ethnicity across all UC campuses. Your app should allow users to explore year, campus, and admit category as interactive variables. Use shiny dashboard and try to incorporate the aesthetics you have learned in ggplot to make the app neat and clean.**  
+```{r}
+UC_admit <- UC_admit %>% 
+  filter(Ethnicity!="All")
+```
 
+```{r}
+ui <- dashboardPage(
+  dashboardHeader(title = "UC Campus Admissions by Ethnicity 2010-2019"),
+  dashboardSidebar(disable=T),
+  dashboardBody(
+  fluidRow(
+  box(title = "Plot Options", width = 3,
+  radioButtons("x", "Select Year", choices = c("2010", "2011", "2012", "2013", "2014", "2015", "2016", "2017", "2018", "2019"), 
+              selected = "2010"),
+  selectInput("y", "Select Campus", choices = c("Davis", "Irvine", "Berkeley", "Irvine", "Los_Angeles", "Merced", "Riverside", "San_Diego", "Santa_Barbara", "Santa_Cruz"),
+              selected = "Davis"),
+  selectInput("z", "Select Admit Category", choices = c("Applicants", "Admits", "Enrollees"),
+              selected = "Applicants")
+  ), # close the first box
+  box(title = "UC Admissions", width = 8,
+  plotOutput("plot", width = "600px", height = "500px")
+  ) # close the second box
+  ) # close the row
+  ) # close the dashboard body
+) # close the ui
+
+server <- function(input, output, session) { 
+  
+  output$plot <- renderPlot({
+    UC_admit %>% 
+    filter(Academic_Yr==input$x & Campus==input$y & Category==input$z) %>% 
+    ggplot(aes(x=reorder(Ethnicity, FilteredCountFR), y=FilteredCountFR)) + 
+      geom_col(color="black", fill="steelblue", alpha=0.75) +
+      theme_light(base_size = 18) +
+      theme(axis.text.x = element_text(angle = 60, hjust = 1))+
+      labs(x = "Ethnicity", y = "Number")
+  })
+  
+  # stop the app when we close it
+  session$onSessionEnded(stopApp)
+
+  }
+
+shinyApp(ui, server)
+```
 
 **3. Make alternate version of your app above by tracking enrollment at a campus over all of the represented years while allowing users to interact with campus, category, and ethnicity.**
+```{r}
+UC_admit$Academic_Yr <- as.factor(UC_admit$Academic_Yr)
 
+ui <- dashboardPage(
+  dashboardHeader(title = "UC Campus Admissions by Year and Ethnicity"),
+  dashboardSidebar(),
+  dashboardBody(
+  fluidRow(
+  box(title = "Plot Options", width = 3,
+  selectInput("x", "Select Campus", choices = c("Davis", "Irvine", "Berkeley", "Irvine", "Los_Angeles", "Merced", "Riverside", "San_Diego", "Santa_Barbara", "Santa_Cruz"),
+              selected = "Davis"),
+  selectInput("z", "Select Admit Category", choices = c("Applicants", "Admits", "Enrollees"),
+              selected = "Applicants"),
+  radioButtons("y", "Select Ethnicity", choices = c("International", "Unknown", "White", "Asian", "Chicano/Latino", "American Indian", "African American"),
+              selected = "International")
+  ), # close the first box
+  box(title = "UC Admissions", width = 7,
+  plotOutput("plot", width = "600px", height = "500px")
+  ) # close the second box
+  ) # close the row
+  ) # close the dashboard body
+) # close the ui
+
+server <- function(input, output, session) { 
+  
+  output$plot <- renderPlot({
+    UC_admit %>% 
+    filter(Campus==input$x & Ethnicity==input$y & Category==input$z) %>% 
+    ggplot(aes(x=Academic_Yr, y=FilteredCountFR)) + 
+      geom_col(color="black", fill="steelblue", alpha=0.75) +
+      theme_light(base_size = 18) +
+      theme(axis.text.x = element_text(angle = 60, hjust = 1))+
+      labs(x = "Year", y = "Enrollment")
+  })
+  
+  # stop the app when we close it
+  session$onSessionEnded(stopApp)
+
+  }
+
+shinyApp(ui, server)
+```
 
 ## Push your final code to GitHub!
 Please be sure that you check the `keep md` file in the knit preferences. 
