--- a/lab12/hw11.Rmd
+++ b/lab12/hw11.Rmd
@@ -59,24 +59,90 @@ is.na(gapminder) #there is no NA in the data.
 
 **2. Among the interesting variables in gapminder is life expectancy. How has global life expectancy changed between 1952 and 2007?**
 ```{r}
-
+gapminder %>% 
+  group_by(year) %>% 
+  summarise(meanle=mean(lifeExp)) %>% 
+  ggplot(aes(x=year, y=meanle))+
+  geom_line()
 ```
 
 **3. How do the distributions of life expectancy compare for the years 1952 and 2007?**
+```{r}
+gapminder %>% 
+  mutate(year=as.factor(year)) %>% 
+  filter(year==1952 | year==2007) %>% 
+  ggplot(aes(x=lifeExp, group=year, fill=year, color="tomato3"))+
+  geom_density(alpha=0.4)
+```
 
 **4. Your answer above doesn't tell the whole story since life expectancy varies by region. Make a summary that shows the min, mean, and max life expectancy by continent for all years represented in the data.**
+```{r}
+gapminder %>% 
+  group_by(continent, year) %>% 
+  summarise(minle=min(lifeExp), 
+            maxle=max(lifeExp), 
+            meanle=mean(lifeExp))
+```
 
 **5. How has life expectancy changed between 1952-2007 for each continent?**
+```{r}
+gapminder %>% 
+  group_by(continent, year) %>% 
+  summarise(minle=min(lifeExp), 
+            maxle=max(lifeExp), 
+            meanle=mean(lifeExp)) %>% 
+  ggplot(aes(x=year, y=meanle, group=continent, color=continent))+
+  geom_line()
+```
 
 **6. We are interested in the relationship between per capita GDP and life expectancy; i.e. does having more money help you live longer?**
+```{r}
+gapminder %>% 
+  ggplot(aes(x=gdpPercap, y=lifeExp))+
+  geom_jitter(size=0.75)+
+  scale_x_log10()+
+  geom_smooth(method = lm, se=T)
+```
 
 **7. Which countries have had the largest population growth since 1952?**
+```{r}
+gapminder %>% 
+  select(country, pop, year) %>% 
+  filter(year==1952 | year==2007) %>% 
+  pivot_wider(names_from = year, 
+              names_prefix = "yr_", 
+              values_from = pop) %>% 
+  mutate(difference=yr_2007-yr_1952) %>% 
+  arrange(desc(difference))
+```
 
 **8. Use your results from the question above to plot population growth for the top five countries since 1952.**
+```{r}
+gapminder %>% 
+  filter(country=="China"|country=="India"|country=="United States"|country=="Indonesia"|country=="Brazil") %>% 
+  select(country, pop, year) %>% 
+  ggplot(aes(x=year, y=pop, color=country))+
+  geom_line()
+```
 
 **9. How does per capita GDP growth compare between these same five countries?**
+```{r}
+gapminder %>% 
+  filter(country=="China"|country=="India"|country=="United States"|country=="Indonesia"|country=="Brazil") %>% 
+  select(country, gdpPercap, year) %>% 
+  ggplot(aes(x=year, y=gdpPercap, color=country))+
+  geom_line()
+```
 
-**10. Make one plot of your choice that uses faceting!**
+**10. Make one plot of your choice that uses faceting!**.  
+how does per capita GDP grow group by continent since 1952
+```{r}
+gapminder %>% 
+  group_by(continent, year) %>% 
+  summarise(meanc=mean(gdpPercap)) %>% 
+  ggplot(aes(x=year, y=meanc, color=continent))+
+  geom_line()
+```
 
 ## Push your final code to GitHub!
 Please be sure that you check the `keep md` file in the knit preferences. 
